unpackaged/main/default/objects/Chart_of_Account__c/fields/FRPS2__c.field-meta.xml
<CustomField>
    <fullName>FRPS2__c</fullName>
    <label>FRPS2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>