unpackaged/main/default/objects/Chart_of_Account__c/fields/FRPSA__c.field-meta.xml
<CustomField>
    <fullName>FRPSA__c</fullName>
    <label>FRPSA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>