unpackaged/main/default/objects/Chart_of_Account__c/fields/Fund_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Fund_Lookup__c</fullName>
    <label>Fund Lookup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>cmbls__Primary_Fund__c</fullName>
                <label>Primary Fund (Repayment)</label>
            </value>
            <value>
                <fullName>cmbls__Previous_Fund__c</fullName>
                <label>Previous Fund (Loan Transfer)</label>
            </value>
            <value>
                <fullName>cmbls__New_Fund__c</fullName>
                <label>New Fund (Loan Transfer)</label>
            </value>
            <value>
                <fullName>cmbls__Previous_Fund__c,cmbls__New_Fund__c</fullName>
                <label>Combination (Loan Transfer)</label>
            </value>
            <value>
                <fullName>cmbls__Payee__c,cmbls__Payer__c</fullName>
                <label>Combination (Intercompany Transaction)</label>
            </value>
            <value>
                <fullName>cmbls__Payer__c</fullName>
                <label>Payer (Intercompany Transaction)</label>
            </value>
            <value>
                <fullName>cmbls__Payee__c</fullName>
                <label>Payee (Intercompany Transaction)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>