unpackaged/main/default/objects/Chart_of_Account__c/fields/GL_Account_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Field_API_Name__c</fullName>
    <label>GL Account # Field (API Name)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>