unpackaged/main/default/objects/Chart_of_Account__c/fields/LOAN__c.field-meta.xml
<CustomField>
    <fullName>LOAN__c</fullName>
    <label>LOAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>