unpackaged/main/default/objects/Chart_of_Account__c/fields/NFAS2__c.field-meta.xml
<CustomField>
    <fullName>NFAS2__c</fullName>
    <label>NFAS2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>