unpackaged/main/default/objects/Chart_of_Account__c/fields/NFAS2toNF__c.field-meta.xml
<CustomField>
    <fullName>NFAS2toNF__c</fullName>
    <label>NFAS2toNF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>