unpackaged/main/default/objects/Chart_of_Account__c/fields/NFAS3__c.field-meta.xml
<CustomField>
    <fullName>NFAS3__c</fullName>
    <label>NFAS3</label>
    <type>TextArea</type>
</CustomField>