unpackaged/main/default/objects/Chart_of_Account__c/fields/NFAS3toNF__c.field-meta.xml
<CustomField>
    <fullName>NFAS3toNF__c</fullName>
    <label>NFAS3toNF</label>
    <type>TextArea</type>
</CustomField>