unpackaged/main/default/objects/Chart_of_Account__c/fields/NFSPV1__c.field-meta.xml
<CustomField>
    <fullName>NFSPV1__c</fullName>
    <label>NFSPV1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>