unpackaged/main/default/objects/Chart_of_Account__c/fields/NFSPV1toNF__c.field-meta.xml
<CustomField>
    <fullName>NFSPV1toNF__c</fullName>
    <label>NFSPV1toNF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>