unpackaged/main/default/objects/Chart_of_Account__c/fields/NFSPV2__c.field-meta.xml
<CustomField>
    <fullName>NFSPV2__c</fullName>
    <label>NFSPV2</label>
    <type>TextArea</type>
</CustomField>