unpackaged/main/default/objects/Chart_of_Account__c/fields/NFtoNFAS2__c.field-meta.xml
<CustomField>
    <fullName>NFtoNFAS2__c</fullName>
    <label>NFtoNFAS2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>