unpackaged/main/default/objects/Chart_of_Account__c/fields/NFtoNFAS3__c.field-meta.xml
<CustomField>
    <fullName>NFtoNFAS3__c</fullName>
    <label>NFtoNFAS3</label>
    <type>TextArea</type>
</CustomField>