unpackaged/main/default/objects/Chart_of_Account__c/fields/NFtoNFSPV1__c.field-meta.xml
<CustomField>
    <fullName>NFtoNFSPV1__c</fullName>
    <label>NFtoNFSPV1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>