unpackaged/main/default/objects/Chart_of_Account__c/fields/NFtoQB__c.field-meta.xml
<CustomField>
    <fullName>NFtoQB__c</fullName>
    <label>NFtoQB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>