unpackaged/main/default/objects/Chart_of_Account__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object (API Name)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>