unpackaged/main/default/objects/Chart_of_Account__c/fields/QBF__c.field-meta.xml
<CustomField>
    <fullName>QBF__c</fullName>
    <label>QBF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>