unpackaged/main/default/objects/Chart_of_Account__c/fields/QBF_FRPSA__c.field-meta.xml
<CustomField>
    <fullName>QBF_FRPSA__c</fullName>
    <label>QBF+FRPSA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>