unpackaged/main/default/objects/Chart_of_Account__c/fields/QBtoNF__c.field-meta.xml
<CustomField>
    <fullName>QBtoNF__c</fullName>
    <label>QBtoNF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>